Add some basic playbook tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,5 +49,5 @@ script:
     fi
   - |
     if [ "${task}" == "BUILD" ]; then
-      ansible-playbook site.yml --limit travis --connection local
+      ansible-playbook tests/suite.yml --limit travis --connection local
     fi
