--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -79,6 +79,11 @@
       become: yes
       vars:
         datadog_api_key: "{{ datadog_key }}"
+        datadog_config:
+          hostname: "{{ inventory_hostname }}"
+          tags:
+            - "env:{{ rails_env }}"
+            - "host-id:{{ ansible_limit }}"
       when: datadog_key is defined
       tags: datadog
 
