--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -88,6 +88,8 @@
       tags: datadog
 
   tasks:
+    - meta: flush_handlers # Ensure handlers run successfully before reporting success
+
     - name: notify slack
       slack:
         token: "T02G54U79/BF25P9F7A/DJdtYaLLUpRJPiu72d8NqgGg"
@@ -95,3 +97,19 @@
         channel: "#devops-notifications"
         username: "ansible executed by {{ lookup('env','USER') }}"
       when: inventory_hostname not in groups['local']
+
+    - name: notify datadog
+      uri:
+        url: "https://api.datadoghq.com/api/v1/events?api_key={{ datadog_key }}"
+        method: POST
+        body:
+          title: "Provisioned"
+          text: "Provisioned host: {{ inventory_hostname }} ({{ ansible_limit }})"
+          host: "{{ inventory_hostname }}"
+          tags:
+            - "provisioned"
+        body_format: json
+        status_code: 202
+        headers:
+          Content-Type: "application/json"
+      when: datadog_key is defined and inventory_hostname not in groups['local']
