Add datadog config for postgres monitoring

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -73,3 +73,10 @@ smtp_password:
 #  - { user: zapier, state: present, password: incredibly_strong_password_goes_here }
 
 
+# For Datadog you will need the following:
+#
+#datadog_db_password: secure_password_goes_here
+#
+#db_integrations:
+#  - { user: datadog, state: present, password: "{{ datadog_db_password }}" }
+
