Improve error handling and refactor

--- a/roles/datadog/tasks/main.yml
+++ b/roles/datadog/tasks/main.yml
@@ -1,25 +1,9 @@
 ---
-- name: enable postgres logging
-  set_fact:
-    datadog_checks:
-      postgres:
-        init_config:
-        instances:
-          - host: localhost
-            port: 5432
-            username: datadog
-            password: "{{ datadog_db_password }}"
-            dbname: "{{ db }}"
-            tags:
-              - "host:{{ inventory_hostname }}"
-            collect_activity_metrics: true
-        logs:
-          - type: file
-            path: /var/log/pg_log/postgresql-*.log
-            source: postgresql
-            sourcecategory: database
-            service: postgres
+
+- name: set up postgres stats collection
+  import_tasks: pg_stats.yml
   when: datadog_db_password is defined
+  tags: pg_stats
 
 - name: configure datadog agent
   include_role:
