--- a/roles/datadog/tasks/pg_stats.yml
+++ b/roles/datadog/tasks/pg_stats.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: enable postgres logging
   set_fact:
     datadog_checks:
@@ -20,6 +19,13 @@
             source: postgresql
             sourcecategory: database
             service: postgres
+  when: datadog_db_password is defined
+
+- name: add datadog agent to postgres group
+  user:
+    name: 'dd-agent'
+    groups: postgres
+    append: yes
   when: datadog_db_password is defined
 
 - name: check datadog db_integration exists
