Add multiline aggregation support

--- a/roles/datadog/tasks/pg_stats.yml
+++ b/roles/datadog/tasks/pg_stats.yml
@@ -19,6 +19,10 @@
             source: postgresql
             sourcecategory: database
             service: postgres
+            log_processing_rules:
+              - type: multi_line
+                pattern: \d{4}\-(0?[1-9]|1[012])\-(0?[1-9]|[12][0-9]|3[01])
+                name: new_log_start_with_date
   when: datadog_db_password is defined
 
 - name: add datadog agent to postgres group
