--- a/roles/datadog/tasks/pg_stats.yml
+++ b/roles/datadog/tasks/pg_stats.yml
@@ -23,6 +23,9 @@
               - type: multi_line
                 pattern: \d{4}\-(0?[1-9]|1[012])\-(0?[1-9]|[12][0-9]|3[01])
                 name: new_log_start_with_date
+              - type: exclude_at_match
+                name: exclude_datadog_stat_collection
+                pattern: datadog@openfoodnetwork\ LOG
   when: datadog_db_password is defined
 
 - name: add datadog agent to postgres group
