--- a/roles/dbserver/tasks/main.yml
+++ b/roles/dbserver/tasks/main.yml
@@ -1,5 +1,6 @@
 --- # dbserver
-- name: create custom log directory
+
+- name: add custom log directory
   file:
     state: directory
     dest: /var/log/pg_log
@@ -9,6 +10,15 @@
   become: yes
 
 - import_tasks: postgresql.yml # Install postgresql with geerlingguy.postgresql role
+
+- name: add postgres conf.d directory
+  file:
+    dest: "{{ postgresql_config_path }}/conf.d"
+    state: directory
+    owner: postgres
+    group: postgres
+    mode: 0740
+  become: yes
 
 - name: add .pgpass file for {{ unicorn_user }}
   template:
@@ -22,9 +32,3 @@
 - import_tasks: fix_template_encoding.yml
   tags: template_encoding
 
-- name: create extensions
-  become: yes
-  become_user: postgres
-  postgresql_ext:
-    name: pg_stat_statements
-    db: "{{ db }}"
