--- a/roles/datadog/tasks/pg_stats.yml
+++ b/roles/datadog/tasks/pg_stats.yml
@@ -24,7 +24,7 @@
       log_filename = 'postgresql-%Y-%m-%d_%H%M%S.log'
       log_file_mode = 0640
       log_truncate_on_rotation = on
-      log_rotation_age = 131490 # 3 months
+      log_rotation_age = 2880 # 2 days
       log_statement = 'all'
     dest: "{{ postgresql_config_path }}/conf.d/logging.conf"
   become: yes
