--- a/inventory/group_vars/be.yml
+++ b/inventory/group_vars/be.yml
@@ -18,10 +18,4 @@ developer_email: admin@openfoodnetwork.be
 
 # Users listed here will have their key from /files/keys added to the unicorn_user
 users_sysadmin:
-  - paco
-  - maikel
-  - matt
-  - pau
-  - enricostn
-  - luis
-  - kristina
+  - "{{ core_devs }}"
