--- a/inventory/group_vars/ca.yml
+++ b/inventory/group_vars/ca.yml
@@ -18,11 +18,5 @@ developer_email: admin@openfoodnetwork.ca
 
 # Users listed here will have their key from /files/keys added to the unicorn_user
 users_sysadmin:
-  - paco
-  - maikel
-  - matt
-  - pau
-  - enricostn
-  - luis
-  - kristina
+  - "{{ core_devs }}"
   - hugo
