--- a/inventory/group_vars/fr.yml
+++ b/inventory/group_vars/fr.yml
@@ -18,11 +18,6 @@ developer_email: admin@openfoodfrance.org
 
 # Users listed here will have their key from /files/keys added to the unicorn_user
 users_sysadmin:
+  - "{{ core_devs }}"
   - paco
-  - maikel
-  - matt
-  - pau
-  - enricostn
-  - luis
-  - kristina
   - hugo
