--- a/inventory/group_vars/au.yml
+++ b/inventory/group_vars/au.yml
@@ -17,11 +17,6 @@ developer_email: maikel@openfoodnetwork.org.au
 
 # Users listed here will have their key from /files/keys added to the unicorn_user
 users_sysadmin:
-  - maikel
+  - "{{ core_devs }}"
   - rob
   - rohan
-  - enricostn
-  - pau
-  - kristina
-  - luis
-  - matt
