South Africa config

--- a/inventory/group_vars/za.yml
+++ b/inventory/group_vars/za.yml
@@ -4,9 +4,15 @@
 checkout_zone: Africa
 country_code: ZA
 currency: ZAR
-locale:
-language:
+locale: en_GB
+language: en_GB.UTF-8
 language_packages:
   - language-pack-en-base
 l10n_repo: https://github.com/openfoodfoundation/l10n_za.git
-timezone:
+timezone: Johannesburg
+
+developer_email: bevan.thrive@gmail.com
+
+users_sysadmin:
+  - "{{ core_devs }}"
+  - bevan
