Make logging an optional extra for later

--- a/roles/datadog/tasks/nginx_stats.yml
+++ b/roles/datadog/tasks/nginx_stats.yml
@@ -16,6 +16,7 @@
     name: 'dd-agent'
     groups: adm
     append: yes
+  when: enable_datadog_logging is defined
 
 - name: enable datadog nginx integration
   template:
