Allow passing a specific AWS region to S3 settings
No need to rely on the default region Db2fog might specify. Needed for https://github.com/openfoodfoundation/openfoodnetwork/pull/3763.

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -20,6 +20,7 @@ google_maps_api_key:
 # Set these if using Amazon S3
 #s3_access_key:
 #s3_secret:
+#s3_region:
 #s3_images_bucket:
 #s3_backups_bucket:
 
