Fix playbook to run to enable db_integrations
And give more details on how to enable the datadog postgres integration.

--- a/inventory/host_vars/_example.com/secrets.example.yml
+++ b/inventory/host_vars/_example.com/secrets.example.yml
@@ -65,10 +65,13 @@ smtp_password:
 # Example settings for integrations like Zapier.
 # ----------------------------------------------
 # Generate a strong password with this command: `openssl rand -hex 128`.
-# You can add one or multiple entries using the lists (with dashes), then run the
-# `integrations.yml` playbook on the target server.
+#
+# You can add one or multiple entries using the lists (with dashes), then run
+# the `db_integrations.yml` playbook on the target server. Then, provision the
+# server for the changes on the datadog agent to take place.
+#
 # To disable an integration, change the `state` key from `present` to: `absent`,
-# remove the custom_* entries, then run the integrations.yml playbook again.
+# remove the custom_* entries, then run the db_integrations.yml playbook again.
 
 #db_integrations:
 #  - { user: zapier, state: present, password: incredibly_strong_password_goes_here }
