Adapt nginx timeouts to unicorn configuration
We had several cases in which we wanted to increase the timeout to over
a minute. While unicorn was running longer than a minute, nginx was
shutting down the connection. Now we have the same timeout for nginx and
unicorn.

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -215,7 +215,9 @@ nginx_sites:
 
       error_page 500 502 503 504 /500.html;
       client_max_body_size 4G;
-      keepalive_timeout 60;
+      keepalive_timeout {{ unicorn_timeout }};
+      proxy_read_timeout {{ unicorn_timeout }};
+      proxy_send_timeout {{ unicorn_timeout }};
 
       include /etc/nginx/sites-available/ofn/*;
 
