--- a/roles/datadog/tasks/pg_stats.yml
+++ b/roles/datadog/tasks/pg_stats.yml
@@ -63,29 +63,46 @@
     msg: "The database role `datadog` has not been created. Add it via the `db_integrations` playbook."
   when: integration_exists.stdout != '1'
 
-- name: check datadog views
-  command: psql -c "SELECT * FROM pg_catalog.pg_views WHERE viewname = 'pg_stat_activity_dd';"
+- name: check pg_stat_activity function
+  command: "psql {{ db }} -c \"SELECT * FROM pg_catalog.pg_proc WHERE proname = 'pg_stat_activity';\""
   become: yes
   become_user: postgres
-  register: stat_views_exist
+  register: pg_stat_activity_exist
   changed_when: False
 
-- name: add pg_stat function and view
-  command: |
-    psql -c "CREATE FUNCTION pg_stat_activity()
-    RETURNS SETOF pg_catalog.pg_stat_activity AS
-    $$ SELECT * from pg_catalog.pg_stat_activity; $$
-    LANGUAGE sql VOLATILE SECURITY DEFINER;
-    CREATE VIEW pg_stat_activity_dd AS SELECT * FROM pg_stat_activity();"
+- name: add pg_stat_activity function
+  command: "psql {{ db }} -c \
+            'CREATE FUNCTION pg_stat_activity() RETURNS SETOF pg_catalog.pg_stat_activity AS $$
+              SELECT * from pg_catalog.pg_stat_activity;
+            $$ LANGUAGE sql VOLATILE SECURITY DEFINER;'"
   become: yes
   become_user: postgres
-  when: stat_views_exist.stdout.find('0 rows') != -1
+  when: pg_stat_activity_exist.stdout.find('0 rows') != -1
   notify: restart postgres
 
-- name: grant select to datadog
-  command: |
-    psql -c "grant SELECT ON pg_stat_activity_dd to datadog;
-    grant SELECT ON pg_stat_database to datadog;"
+- name: check pg_stat_activity_dd view
+  command: "psql {{ db }} -c \"SELECT * FROM pg_catalog.pg_views WHERE viewname = 'pg_stat_activity_dd';\""
+  become: yes
+  become_user: postgres
+  register: pg_stat_activity_dd_exist
+  changed_when: False
+
+- name: add pg_stat_activity_dd view
+  command: "psql {{ db }} -c 'CREATE VIEW pg_stat_activity_dd AS SELECT * FROM pg_stat_activity();'"
+  become: yes
+  become_user: postgres
+  when: pg_stat_activity_dd_exist.stdout.find('0 rows') != -1
+  notify: restart postgres
+
+- name: grant SELECT on pg_stat_activity_dd to Datadog
+  postgresql_privs:
+    database: "{{ db }}"
+    state: present
+    privs: SELECT
+    type: table
+    objs: pg_stat_activity_dd
+    roles: datadog
+    grant_option: no
   become: yes
   become_user: postgres
   notify: restart postgres
