Enable datadog in development
This makes it possible to develop and debug the datadog role using an
LXC container without having to mess with staging.

--- a/playbooks/development.yml
+++ b/playbooks/development.yml
@@ -38,6 +38,10 @@
       tags: dbserver
       db_user_roles: SUPERUSER,CREATEDB
 
+    - role: datadog
+      become: yes
+      tags: datadog
+
   vars:
     ansible_python_interpreter: /usr/bin/python2.7
     language_packages:
