Make Datadog monitor all OFN's database tables
This way we avoid hardcoding the table names and all schema changes will
be reflected in Datadog upon provisioning. I have asked Datadog to
implement this an agent's feature (get all tables in database by
default) but I have a little confidence this request will ever make it
through.

--- a/roles/datadog/tasks/pg_stats.yml
+++ b/roles/datadog/tasks/pg_stats.yml
@@ -33,6 +33,19 @@
   notify: restart postgres
   when: enable_datadog_logging is defined
 
+- name: get relations in openfoodnetwork's database
+  command: "psql {{ db }} -tAc \"SELECT c.relname AS table_name
+    FROM pg_catalog.pg_class c
+    LEFT JOIN pg_catalog.pg_namespace n ON (n.oid = c.relnamespace)
+    WHERE c.relkind IN ('r','v','m','p')
+      AND c.relpersistence <> 't'
+      AND c.relname NOT IN ('pg_stat_statements')
+      AND n.nspname NOT IN ('pg_catalog','pg_toast','information_schema');\""
+  become: yes
+  become_user: postgres
+  register: openfoodnetwork_relations
+  changed_when: False
+
 - name: enable datadog postgres integration
   template:
     src: dd-postgres.j2
