--- a/tests/rollback/test.yml
+++ b/tests/rollback/test.yml
@@ -10,7 +10,7 @@
       command: |
         psql {{ db }} -tAc "
         SELECT 1 FROM spree_preferences
-        WHERE value='rollback_test' AND key='spree/app_configuration/privacy_policy_url';"
+        WHERE value='rollback_test' AND key='ofn/rollback_test_key';"
       changed_when: False
       register: rollback_test
       failed_when: rollback_test.stdout == '1'
