Serve www and naked BE domains with the same cert
This will fix the naked domain for BE, which now returns
ERR_EMPTY_RESPONSE.

--- a/inventory/host_vars/www.openfoodnetwork.be/config.yml
+++ b/inventory/host_vars/www.openfoodnetwork.be/config.yml
@@ -6,3 +6,7 @@ rails_env: production
 admin_email: admin@openfoodnetwork.be
 
 mail_domain: openfoodnetwork.be
+
+certbot_domains:
+  - www.openfoodnetwork.be
+  - openfoodnetwork.be
