Fix timezone issue for South Africa

--- a/inventory/group_vars/za.yml
+++ b/inventory/group_vars/za.yml
@@ -9,7 +9,7 @@ language: en_GB.UTF-8
 language_packages:
   - language-pack-en-base
 l10n_repo: https://github.com/openfoodfoundation/l10n_za.git
-timezone: Johannesburg
+timezone: Pretoria
 
 developer_email: bevan.thrive@gmail.com
 
