--- a/inventory/host_vars/_example.com/config.yml
+++ b/inventory/host_vars/_example.com/config.yml
@@ -26,5 +26,5 @@ mail_domain: example.com
 #custom_hba_entries:
 #  - { type: hostssl, database: "{{ db }}", user: zapier, address: '54.86.9.50/32', auth_method: md5 }
 #
-# Feature toggles
-#feature_connect_and_learn: "true"
+#custom_application_env_vars: |
+#  OFN_FEATURE_CONNECT_AND_LEARN: "true"
