--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -200,6 +200,7 @@ nginx_sites:
       add_header X-Xss-Protection "1; mode=block" always;
 
       gzip on;
+      gzip_types text/html text/css text/javascript text/plain application/javascript application/x-javascript application/json;
       gzip_disable "msie6";
 
       brotli on;
@@ -207,9 +208,11 @@ nginx_sites:
 
       try_files $uri/index.html $uri @unicorn;
       location @unicorn {
-        gzip_proxied no-cache no-store private expired auth;
-        gzip_types text/html text/css text/javascript text/plain application/javascript application/x-javascript application/json;
+        if (-f /etc/nginx/maintenance.html) {
+          return 503;
+        }
 
+        gzip_proxied no-cache no-store private expired auth;
         proxy_http_version 1.1
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
@@ -225,7 +228,14 @@ nginx_sites:
         add_header Cache-Control public;
       }
 
-      error_page 500 502 503 504 /500.html;
+      error_page 500 502 504 /500.html;
+      error_page 503 @maintenance;
+
+      location @maintenance {
+        root /etc/nginx;
+        try_files /maintenance.html =503;
+      }
+
       client_max_body_size 4G;
       keepalive_timeout {{ unicorn_timeout }};
       proxy_read_timeout {{ unicorn_timeout }};
