Parse nginx version number only

--- a/roles/brotli_nginx/tasks/build.yml
+++ b/roles/brotli_nginx/tasks/build.yml
@@ -14,13 +14,13 @@
   become: yes
 
 - name: register nginx version
-  command: nginx -v
-  register: nginx_version_raw
+  command: bash -c "nginx -v 2>&1 | grep -o '[0-9.]*'"
+  register: nginx_version_register
   changed_when: False
 
-- name: parse nginx version
+- name: set installed nginx version
   set_fact:
-    installed_nginx_version: "{{ nginx_version_raw.stderr.split('nginx/')[1] }}"
+    installed_nginx_version: "{{ nginx_version_register.stdout }}"
 
 - name: create nginx source directory
   file:
