Move precompile tasks from handlers to deploy playbook

--- a/roles/deploy/tasks/deploy.yml
+++ b/roles/deploy/tasks/deploy.yml
@@ -130,6 +130,23 @@
   args:
     chdir: "{{ build_path }}"
 
+# Precompile assets
+
+- name: precompile assets
+  command: bash -lc "bundle exec rake assets:clean assets:precompile:primary RAILS_GROUPS=assets RAILS_ENV={{ rails_env }}"
+  args:
+    chdir: "{{ current_path }}"
+  become: yes
+  become_user: "{{ unicorn_user }}"
+  notify: precompile nondigest assets
+
+- name: precompile nondigest assets
+  command: bash -lc "bundle exec rake assets:precompile:nondigest RAILS_GROUPS=assets RAILS_ENV={{ rails_env }}"
+  args:
+    chdir: "{{ current_path }}"
+  become: yes
+  become_user: "{{ unicorn_user }}"
+
 # Move new build into place
 
 - name: remove the current build
