Add Filipe's ssh key and allow access to staging FR and ES, not production

--- a/inventory/host_vars/staging.katuma.org/config.yml
+++ b/inventory/host_vars/staging.katuma.org/config.yml
@@ -5,3 +5,8 @@ rails_env: staging
 admin_email: info@coopdevs.org
 
 mail_domain: katuma.org
+
+users_sysadmin:
+  - "{{ core_devs }}"
+  - dani
+  - filipe
