--- a/inventory/host_vars/staging.openfoodfrance.org/config.yml
+++ b/inventory/host_vars/staging.openfoodfrance.org/config.yml
@@ -9,3 +9,9 @@ admin_email: admin@openfoodfrance.org
 mail_domain: openfoodfrance.org
 
 unicorn_timeout: 120
+
+users_sysadmin:
+  - "{{ core_devs }}"
+  - paco
+  - hugo
+  - filipe
