--- a/roles/deploy/tasks/rollbacks.yml
+++ b/roles/deploy/tasks/rollbacks.yml
@@ -1,19 +1,8 @@
 ---
 
-# Remove old rollbacks so they aren't used accidentally after errors.
+# Create a database rollback
 
-- name: remove the old rollbacks
-  file:
-    dest: "{{ item }}"
-    state: absent
-  with_items:
-    - "{{ rollback_path }}"
-    - "{{ rollback_sql_path }}"
-  tags: clone
-
-# Create a rollback release
-
-- name: create a database rollback version
+- name: create a database dump
   postgresql_db:
     name: "{{ db }}"
     state: dump
@@ -21,21 +10,32 @@
   become: yes
   become_user: postgres
 
-- name: move database dump
-  command: mv {{ rollback_tmp_path }} {{ rollback_sql_path }}
+- name: move to releases folder
+  command: mv {{ rollback_tmp_path }} {{ current_path_stats.stat.lnk_source }}.sql.gz
   become: yes
   become_user: root
   args:
-    removes: "{{ rollback_tmp_path }}"
+    creates: "{{ current_path_stats.stat.lnk_source }}.sql.gz"
 
-- name: create a database backup version
-  command: cp {{ rollback_sql_path }} {{ releases_path }}/{{ timestamp }}.sql.gz
-  args:
-    creates: "{{ releases_path }}/{{ timestamp }}.sql.gz"
+# Symlink database dump and current app to /rollback
 
-- name: create a repo rollback version # noqa 301
-  command: cp -TLr {{ current_path }} {{ rollback_path }}
-  register: new_rollback
+- name: symlink to database rollback
+  file:
+    src: "{{ current_path_stats.stat.lnk_source }}.sql.gz"
+    dest: "{{ rollback_sql_path }}"
+    owner: "{{ unicorn_user }}"
+    state: link
+    force: yes
+  become: yes
+
+- name: symlink to app rollback
+  file:
+    src: "{{ current_path_stats.stat.lnk_source }}"
+    dest: "{{ rollback_path }}"
+    owner: "{{ unicorn_user }}"
+    state: link
+    force: yes
+  become: yes
 
 # Clean up old release files
 
