Revert "Zero downtime deployments"

--- a/roles/deploy/tasks/deploy.yml
+++ b/roles/deploy/tasks/deploy.yml
@@ -2,6 +2,12 @@
 
 # Build codebase
 
+- name: remove the old build path
+  file:
+    dest: "{{ build_path }}"
+    state: absent
+  tags: clone
+
 - name: build codebase from git branch
   git:
     repo: "{{ git_repo }}"
@@ -11,7 +17,7 @@
     force: yes
   tags: clone
 
-- name: symlink custom assets into the build
+- name: symlink into the repo
   file:
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
@@ -65,7 +71,7 @@
   tags:
     - bundle_app
     - skip_ansible_lint
-  notify: reload unicorn
+  notify: restart unicorn
 
 # Update the database
 
@@ -92,7 +98,7 @@
   tags:
     - rake
     - skip_ansible_lint
-  notify: reload unicorn
+  notify: restart unicorn
 
 - name: seed database
   command: bash -lc "bundle exec rake db:seed RAILS_ENV={{ rails_env }}"
@@ -101,31 +107,38 @@
   tags:
     - seed
     - skip_ansible_lint
-  notify: reload unicorn
+  notify: restart unicorn
 
 # Precompile assets
 
 - name: precompile assets
   import_tasks: precompile.yml
 
-# Note: this task can be removed after all servers have been provisioned and deployed
-- name: delete current path unless it's a symlink
+# Move new build into place
+
+- name: remove the current build
   file:
     dest: "{{ current_path }}"
     state: absent
-  when: current_path_stats.stat.islnk is defined and not current_path_stats.stat.islnk
+  tags: clone
 
-# Move new build into place
+- name: move build to current
+  command: mv {{ build_path }} {{ current_path }}
+  args:
+    removes: "{{ build_path }}"
+  changed_when: True
 
-- name: symlink build to current
-  file:
-    src: "{{ build_path }}"
-    dest: "{{ current_path }}"
-    owner: "{{ unicorn_user }}"
-    state: link
-    force: yes
+# Restart and update
+
+- name: restart delayed job service
+  service:
+    name: delayed_job_{{ app }}
+    state: restarted
   become: yes
-  notify:
-    - reload unicorn
-    - restart delayed_job
-    - update whenever
+  become_user: root
+
+- name: update whenever
+  command: bash -lc "bundle exec whenever --set 'environment={{ rails_env }}' --update-crontab"
+  changed_when: True
+  args:
+    chdir: "{{ current_path }}"
