--- a/roles/deploy/tasks/main.yml
+++ b/roles/deploy/tasks/main.yml
@@ -1,19 +1,13 @@
 --- # Deploy
 
-- name: Fetch stats on current deployment
+- name: Check if app is deployed
   stat:
-    path: "{{ current_path }}"
-  register: current_path_stats
+    path: "{{ current_path }}/"
+  register: current_path_check
 
-# Note: this can be tidied up after all servers have been provisioned and deployed
-- name: Handle rollbacks the old way
-  import_tasks: old_rollbacks.yml
-  when: current_path_stats.stat.islnk is defined and not current_path_stats.stat.islnk
-  tags: rollbacks
-
-- name: Handle rollbacks the new way
+- name: Handle rollbacks
   import_tasks: rollbacks.yml
-  when: current_path_stats.stat.islnk is defined and current_path_stats.stat.islnk
+  when: current_path_check.stat.exists
   tags: rollbacks
 
 - name: Deploy
