--- a/roles/rollback/tasks/main.yml
+++ b/roles/rollback/tasks/main.yml
@@ -1,19 +1,14 @@
 --- # Rollback
 
-- name: fetch stats of rollback symlink
-  stat:
-    path: "{{ rollback_path }}"
-  register: rollback_symlink
-
-- name: symlink rollback source to current path
+- name: remove current path
   file:
-    src: "{{ rollback_symlink.stat.lnk_source }}"
     dest: "{{ current_path }}"
-    owner: "{{ unicorn_user }}"
-    state: link
-    force: yes
-  become: yes
-  notify: reload unicorn
+    state: absent
+
+- name: copy rollback repo to current path
+  command: cp -r {{ rollback_path }} {{ current_path }}
+  args:
+    creates: "{{ current_path }}"
 
 - name: restore database
   include_role:
