--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -27,7 +27,7 @@
     group: "{{ unicorn_user }}"
   become: yes
   tags: unicorn_config
-  notify: reload unicorn configs
+  notify: reload unicorn
 
 - name: Reload systemd
   systemd:
