Restart unicorn on provision if contents of unicorn service have changed.
A full restart is needed to pick up changes to the service file.

--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -15,6 +15,7 @@
   register: unicorn_service_files
   notify:
     - restart nginx
+    - restart unicorn if running
   tags: init
 
 - name: provision unicorn config
